# aaa-sessional-recommendations

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  project_assessment.md  pyproject.toml  requirements.txt  rps_benchmark.py  transfer_dataset_description.md
app/: main.py  schemas.py
app/api/: v1.py
app/core/: config.py  env.py
app/eval/: __init__.py
app/eval/llm_judge/: __init__.py  build_examples_from_session.py  judge.py  prompts.py  run.py  schemas.py
app/ml/: ann_index.py  base.py  factory.py  reranker.py  strategies.py
app/services/: catalog.py  datasets.py  image_urls.py  log_store.py  session_store.py
data/models/: reranker_catboost.cbm
frontend/: index.html
notebooks/: build_faiss_ann.ipynb  eda.ipynb  extract_embeddings.ipynb  reranker.ipynb
solution_diagram_and_metrics/: project_assessment.md  project_questions.md
