[project]
name = "aaa-sessional-recommendations"
version = "0.1.0"
description = "AAA Sessional Recommendations"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "boto3>=1.43.29",
    "catboost>=1.2",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.110",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "numpy>=1.26",
    "polars>=1.41.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "uvicorn[standard]>=0.29",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu132" }]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[dependency-groups]
dev = [
    "accelerate>=1.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pyarrow>=24.0.0",
    "requests-aws4auth>=1.3.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.5.1",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
]
